Fix spacing issues with Media Card to close #100

--- a/assets/scss/blocks/nova-blocks/_frontend.scss
+++ b/assets/scss/blocks/nova-blocks/_frontend.scss
@@ -1,8 +1,8 @@
 @import "style";
 
-.novablocks-media,
-.novablocks-slideshow,
-.novablocks-hero {
+.novablocks-media[class],
+.novablocks-slideshow[class],
+.novablocks-hero[class] {
 
     & + & {
         margin-top: 0;
