--- a/assets/scss/blocks/nova-blocks/_style.scss
+++ b/assets/scss/blocks/nova-blocks/_style.scss
@@ -18,3 +18,9 @@
         --novablocks-sides-spacings: var(--theme-wrapper-sides-spacing);
     }
 }
+
+.novablocks-block {
+    &.novablocks-media {
+        --novablocks-block-padding: var(--novablocks-spacing);
+    }
+}
